Add educational classification for substitution ciphers in UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -39,6 +39,14 @@
             <!-- Algorithm Info Card -->
             <section class="card info-card" id="algorithm-info">
                 <h3 id="algo-name">Caesar Cipher</h3>
+                
+                <!-- Classification Tags -->
+                <div class="algo-tags">
+                    <span class="tag tag-type" id="tag-type">Substitution</span>
+                    <span class="tag tag-subtype" id="tag-subtype">Monoalphabetic</span>
+                    <span class="tag tag-security" id="tag-security">⭐ Weak</span>
+                </div>
+                
                 <div class="formula-box">
                     <span class="formula-label">Formula:</span>
                     <code id="algo-formula">C = (P + k) mod 26</code>
